fix feature create group and UI