@@ -5,7 +5,9 @@ import java.security.SecureRandom;
 import java.time.Instant;
 import java.util.ArrayList;
 import java.util.Base64;
+import java.util.Collection;
 import java.util.Collections;
+import java.util.LinkedHashSet;
 import java.util.List;
 import java.util.Map;
 import java.util.UUID;
@@ -17,35 +19,34 @@ import org.slf4j.LoggerFactory;
 import vn.edu.hcmus.securechat.client.crypto.E2eeCryptoService;
 import vn.edu.hcmus.securechat.common.protocol.JsonSerializer;
 import vn.edu.hcmus.securechat.common.protocol.PacketFrame;
-import vn.edu.hcmus.securechat.common.protocol.dto.GroupMessageDto;
 import vn.edu.hcmus.securechat.common.protocol.dto.EncryptedChatEnvelope;
-import vn.edu.hcmus.securechat.common.protocol.dto.ChatMessage;
+import vn.edu.hcmus.securechat.common.protocol.dto.GroupMessageDto;
 
 /**
- * Quản lý tính năng Group Chat — Client-side Fan-out.
+ * Client-side group chat manager.
  *
- * <p>Kiến trúc: Client tự sinh N {@link EncryptedChatEnvelope} (một cho mỗi thành viên nhóm),
- * đóng gói vào {@link GroupMessageDto} rồi gửi lên Chat Server dưới dạng
- * {@code GROUP_MESSAGE}. Chat Server chỉ fan-out nguyên gói mà không biết nội dung.</p>
- *
- * <p>Bảo mật: Mỗi payload được E2EE bằng {@link E2eeCryptoService#encryptForPeer(String, String)},
- * tái dụng hoàn toàn Double Ratchet session hiện có. Không có khóa nhóm tập trung.</p>
- *
- * <p>Persistence: Nhóm lưu trong bộ nhớ phiên + SQLite cục bộ thông qua
- * {@code LocalDatabase} (bảng {@code groups}).</p>
+ * <p>Text messages are still fan-out E2EE payloads. Membership changes are sent
+ * as small GROUP_MESSAGE control frames so every member can keep local metadata
+ * in sync without adding a new server-visible group registry.</p>
  */
 public class GroupManager {
 
+    public static final int MIN_GROUP_MEMBERS = 3;
+    public static final String CONTROL_GROUP_CREATED = "GROUP_CREATED";
+    public static final String CONTROL_MEMBERS_UPDATED = "MEMBERS_UPDATED";
+    public static final String CONTROL_MEMBER_REMOVED = "MEMBER_REMOVED";
+
     private static final Logger log = LoggerFactory.getLogger(GroupManager.class);
 
-    /** Thông tin định nghĩa một nhóm. */
-    public record GroupInfo(String groupId, String groupName, List<String> memberIds) {}
+    public record GroupInfo(String groupId, String groupName, List<String> memberIds, String leaderId) {
+        public boolean isLeader(String userId) {
+            return leaderId != null && leaderId.equals(userId);
+        }
+    }
 
     private final String localUserId;
     private final E2eeCryptoService e2ee;
     private final vn.edu.hcmus.securechat.client.db.LocalDatabase localDb;
-
-    /** Bản đồ groupId → GroupInfo, lưu trong bộ nhớ phiên. */
     private final Map<String, GroupInfo> groups = new ConcurrentHashMap<>();
 
     public GroupManager(String localUserId, E2eeCryptoService e2ee,
@@ -57,17 +58,16 @@ public class GroupManager {
     }
 
     private void loadGroupsFromDb() {
-        if (localDb == null) return;
+        if (localDb == null) {
+            return;
+        }
         try {
-            java.util.List<vn.edu.hcmus.securechat.client.db.LocalDatabase.GroupInfoRecord> dbGroups = localDb.loadGroups();
+            List<vn.edu.hcmus.securechat.client.db.LocalDatabase.GroupInfoRecord> dbGroups = localDb.loadGroups();
             for (vn.edu.hcmus.securechat.client.db.LocalDatabase.GroupInfoRecord r : dbGroups) {
-                List<String> members = new ArrayList<>();
-                for (String m : r.members().split(",")) {
-                    if (!m.trim().isEmpty()) {
-                        members.add(m.trim());
-                    }
-                }
-                groups.put(r.groupId(), new GroupInfo(r.groupId(), r.groupName(), Collections.unmodifiableList(members)));
+                List<String> members = normalizeMembers(splitMembers(r.members()), true);
+                String leaderId = chooseLeader(r.leaderId(), members);
+                groups.put(r.groupId(), new GroupInfo(
+                        r.groupId(), r.groupName(), immutableMembers(members), leaderId));
             }
             log.info("Loaded {} groups from local database", dbGroups.size());
         } catch (Exception e) {
@@ -75,88 +75,60 @@ public class GroupManager {
         }
     }
 
-    /**
-     * Tạo nhóm mới với danh sách thành viên cho trước.
-     *
-     * @param groupName  Tên nhóm hiển thị
-     * @param memberIds  Danh sách userId của thành viên (KHÔNG bao gồm localUser — tự được thêm)
-     * @return {@link GroupInfo} vừa tạo
-     */
     public GroupInfo createGroup(String groupName, List<String> memberIds) {
-        String groupId = "group-" + UUID.randomUUID().toString();
-        List<String> allMembers = new ArrayList<>(memberIds);
-        if (!allMembers.contains(localUserId)) {
-            allMembers.add(localUserId);
+        List<String> allMembers = normalizeMembers(memberIds, true);
+        if (allMembers.size() < MIN_GROUP_MEMBERS) {
+            throw new IllegalArgumentException("A group must have at least " + MIN_GROUP_MEMBERS + " members");
         }
-        GroupInfo info = new GroupInfo(groupId, groupName, Collections.unmodifiableList(allMembers));
+
+        String groupId = "group-" + UUID.randomUUID();
+        GroupInfo info = new GroupInfo(groupId, groupName, immutableMembers(allMembers), localUserId);
         groups.put(groupId, info);
+        persist(info);
 
-        if (localDb != null) {
-            localDb.saveGroup(groupId, groupName, String.join(",", allMembers));
-        }
-
-        log.info("Group created: groupId={} name={} members={}", groupId, groupName, allMembers);
+        log.info("Group created: groupId={} name={} members={} leader={}",
+                groupId, groupName, allMembers, localUserId);
         return info;
     }
 
     public GroupInfo registerGroup(String groupId, String groupName, String senderId) {
-        return registerGroup(groupId, groupName, List.of(senderId));
+        return registerGroup(groupId, groupName, List.of(senderId), senderId);
     }
 
     public GroupInfo registerGroup(String groupId, String groupName, List<String> members) {
-        GroupInfo info = groups.get(groupId);
-        if (info == null) {
-            List<String> uniqueMembers = new ArrayList<>();
-            for (String m : members) {
-                String trimmed = m.trim();
-                if (!trimmed.isEmpty() && !uniqueMembers.contains(trimmed)) {
-                    uniqueMembers.add(trimmed);
-                }
-            }
-            if (!uniqueMembers.contains(localUserId)) {
-                uniqueMembers.add(localUserId);
-            }
-            info = new GroupInfo(groupId, groupName, Collections.unmodifiableList(uniqueMembers));
-            groups.put(groupId, info);
-
-            if (localDb != null) {
-                localDb.saveGroup(groupId, groupName, String.join(",", uniqueMembers));
-            }
-            log.info("Registered group dynamically: groupId={} name={} members={}", groupId, groupName, uniqueMembers);
-        }
-        return info;
+        return registerGroup(groupId, groupName, members, null);
     }
 
-    /**
-     * Gửi một tin nhắn văn bản tới toàn bộ thành viên nhóm.
-     *
-     * <p>Phương thức này chạy trong SwingWorker thread — KHÔNG gọi từ EDT.</p>
-     *
-     * @param groupId ID nhóm đã tạo
-     * @param text    Nội dung tin nhắn plaintext
-     * @throws IOException          Lỗi mạng
-     * @throws IllegalStateException Không tìm thấy nhóm hoặc chưa kết nối
-     */
+    public GroupInfo registerGroup(String groupId, String groupName, List<String> members, String leaderId) {
+        GroupInfo existing = groups.get(groupId);
+        List<String> uniqueMembers = normalizeMembers(members, true);
+        String resolvedLeader = chooseLeader(
+                leaderId != null && !leaderId.isBlank()
+                        ? leaderId
+                        : (existing == null ? null : existing.leaderId()),
+                uniqueMembers);
+        GroupInfo updated = new GroupInfo(groupId, groupName, immutableMembers(uniqueMembers), resolvedLeader);
+        groups.put(groupId, updated);
+        persist(updated);
+
+        log.info("Registered/updated group: groupId={} name={} members={} leader={}",
+                groupId, groupName, uniqueMembers, resolvedLeader);
+        return updated;
+    }
+
     public void sendGroupMessage(String groupId, String text) throws IOException {
-        GroupInfo info = groups.get(groupId);
-        if (info == null) {
-            throw new IllegalStateException("Group not found: " + groupId);
-        }
-        if (e2ee.getChatSocket() == null || e2ee.getChatSocket().isClosed()) {
-            throw new IllegalStateException("Chat socket not connected");
-        }
+        GroupInfo info = requireGroup(groupId);
+        ensureSocketConnected();
 
         List<String> recipientIds = new ArrayList<>();
         List<String> encryptedPayloads = new ArrayList<>();
         long sentAt = Instant.now().getEpochSecond();
 
-        // Fan-out: mã hóa riêng cho từng thành viên (trừ localUser)
         for (String memberId : info.memberIds()) {
             if (memberId.equals(localUserId)) {
                 continue;
             }
             try {
-                // Tái dụng E2EE kênh hiện có (Double Ratchet)
                 EncryptedChatEnvelope envelope = e2ee.encryptForPeer(memberId, text);
                 recipientIds.add(memberId);
                 encryptedPayloads.add(JsonSerializer.toJsonString(envelope));
@@ -170,58 +142,203 @@ public class GroupManager {
             return;
         }
 
-        // Sinh nonce chống replay
-        byte[] nonceBytes = new byte[16];
-        new SecureRandom().nextBytes(nonceBytes);
-        String nonce = Base64.getEncoder().encodeToString(nonceBytes);
-
         GroupMessageDto dto = new GroupMessageDto(
                 groupId, info.groupName(), localUserId,
-                recipientIds, encryptedPayloads, sentAt, nonce);
+                recipientIds, encryptedPayloads, sentAt, newNonce());
+        dto.setMemberIds(new ArrayList<>(info.memberIds()));
+        dto.setLeaderId(info.leaderId());
 
-        try {
-            e2ee.sendFrame(PacketFrame.TYPE_GROUP_MESSAGE, JsonSerializer.toBytes(dto));
-        } catch (vn.edu.hcmus.securechat.common.exception.ProtocolException pe) {
-            throw new IOException("Failed to serialize GroupMessageDto", pe);
-        }
+        sendGroupDto(dto);
         log.info("GROUP_MESSAGE sent groupId={} recipients={}", groupId, recipientIds.size());
     }
 
-    /**
-     * Trả về danh sách tất cả nhóm hiện có trong phiên.
-     */
     public List<GroupInfo> listGroups() {
         return new ArrayList<>(groups.values());
     }
 
-    /**
-     * Lấy thông tin nhóm theo ID. Trả về {@code null} nếu không tồn tại.
-     */
     public GroupInfo getGroup(String groupId) {
         return groups.get(groupId);
     }
 
-    /**
-     * Thêm thành viên vào nhóm đã có.
-     */
-    public boolean addMember(String groupId, String newMemberId) {
-        GroupInfo old = groups.get(groupId);
-        if (old == null) return false;
-        if (old.memberIds().contains(newMemberId)) return true;
-        List<String> updated = new ArrayList<>(old.memberIds());
-        updated.add(newMemberId);
-        groups.put(groupId, new GroupInfo(groupId, old.groupName(), Collections.unmodifiableList(updated)));
-        log.info("Member {} added to group {}", newMemberId, groupId);
-        return true;
+    public GroupInfo addMember(String groupId, String newMemberId) {
+        return addMembers(groupId, List.of(newMemberId));
     }
 
-    /**
-     * Xóa nhóm khỏi bộ nhớ phiên và CSDL cục bộ.
-     */
+    public GroupInfo addMembers(String groupId, List<String> newMemberIds) {
+        GroupInfo old = requireGroup(groupId);
+        List<String> updatedMembers = new ArrayList<>(old.memberIds());
+        boolean changed = false;
+        for (String memberId : normalizeMembers(newMemberIds, false)) {
+            if (!updatedMembers.contains(memberId)) {
+                updatedMembers.add(memberId);
+                changed = true;
+            }
+        }
+        if (!changed) {
+            return old;
+        }
+        GroupInfo updated = new GroupInfo(
+                groupId, old.groupName(), immutableMembers(updatedMembers), old.leaderId());
+        groups.put(groupId, updated);
+        persist(updated);
+        log.info("Members added to group {}: {}", groupId, newMemberIds);
+        return updated;
+    }
+
+    public GroupInfo removeMember(String groupId, String memberId, String actorId) {
+        GroupInfo old = requireGroup(groupId);
+        if (!old.isLeader(actorId)) {
+            throw new SecurityException("Only the group leader can remove members");
+        }
+        if (memberId == null || memberId.isBlank() || !old.memberIds().contains(memberId)) {
+            return old;
+        }
+        if (memberId.equals(old.leaderId())) {
+            throw new IllegalArgumentException("The group leader cannot remove themself");
+        }
+        if (old.memberIds().size() - 1 < MIN_GROUP_MEMBERS) {
+            throw new IllegalStateException("A group must keep at least " + MIN_GROUP_MEMBERS + " members");
+        }
+
+        List<String> updatedMembers = new ArrayList<>(old.memberIds());
+        updatedMembers.remove(memberId);
+        GroupInfo updated = new GroupInfo(
+                groupId, old.groupName(), immutableMembers(updatedMembers), old.leaderId());
+        groups.put(groupId, updated);
+        persist(updated);
+        log.info("Member {} removed from group {}", memberId, groupId);
+        return updated;
+    }
+
+    public void broadcastGroupCreated(String groupId) throws IOException {
+        GroupInfo info = requireGroup(groupId);
+        sendGroupControl(info, CONTROL_GROUP_CREATED, recipientsExceptLocal(info.memberIds()), null);
+    }
+
+    public void broadcastMembersUpdated(String groupId) throws IOException {
+        GroupInfo info = requireGroup(groupId);
+        sendGroupControl(info, CONTROL_MEMBERS_UPDATED, recipientsExceptLocal(info.memberIds()), null);
+    }
+
+    public void broadcastMemberRemoved(String groupId, String removedMemberId) throws IOException {
+        GroupInfo info = requireGroup(groupId);
+        List<String> recipients = recipientsExceptLocal(info.memberIds());
+        if (removedMemberId != null && !removedMemberId.equals(localUserId) && !recipients.contains(removedMemberId)) {
+            recipients.add(removedMemberId);
+        }
+        sendGroupControl(info, CONTROL_MEMBER_REMOVED, recipients, removedMemberId);
+    }
+
     public void removeGroup(String groupId) {
         groups.remove(groupId);
         if (localDb != null) {
             localDb.deleteGroup(groupId);
         }
+    }
+
+    private void sendGroupControl(GroupInfo info, String controlType,
+                                  Collection<String> recipients, String removedMemberId) throws IOException {
+        ensureSocketConnected();
+        List<String> recipientIds = normalizeMembers(new ArrayList<>(recipients), false);
+        if (recipientIds.isEmpty()) {
+            return;
+        }
+        GroupMessageDto dto = new GroupMessageDto(
+                info.groupId(), info.groupName(), localUserId,
+                recipientIds, Collections.nCopies(recipientIds.size(), ""),
+                Instant.now().getEpochSecond(), newNonce());
+        dto.setControlType(controlType);
+        dto.setMemberIds(new ArrayList<>(info.memberIds()));
+        dto.setLeaderId(info.leaderId());
+        dto.setRemovedMemberId(removedMemberId);
+        sendGroupDto(dto);
+        log.info("GROUP_CONTROL sent groupId={} type={} recipients={}",
+                info.groupId(), controlType, recipientIds.size());
+    }
+
+    private void sendGroupDto(GroupMessageDto dto) throws IOException {
+        try {
+            e2ee.sendFrame(PacketFrame.TYPE_GROUP_MESSAGE, JsonSerializer.toBytes(dto));
+        } catch (vn.edu.hcmus.securechat.common.exception.ProtocolException pe) {
+            throw new IOException("Failed to serialize GroupMessageDto", pe);
+        }
+    }
+
+    private void ensureSocketConnected() {
+        if (e2ee.getChatSocket() == null || e2ee.getChatSocket().isClosed()) {
+            throw new IllegalStateException("Chat socket not connected");
+        }
+    }
+
+    private GroupInfo requireGroup(String groupId) {
+        GroupInfo info = groups.get(groupId);
+        if (info == null) {
+            throw new IllegalStateException("Group not found: " + groupId);
+        }
+        return info;
+    }
+
+    private void persist(GroupInfo info) {
+        if (localDb != null) {
+            localDb.saveGroup(info.groupId(), info.groupName(),
+                    String.join(",", info.memberIds()), info.leaderId());
+        }
+    }
+
+    private List<String> recipientsExceptLocal(List<String> members) {
+        List<String> recipients = new ArrayList<>();
+        for (String member : members) {
+            if (!localUserId.equals(member)) {
+                recipients.add(member);
+            }
+        }
+        return recipients;
+    }
+
+    private List<String> normalizeMembers(List<String> members, boolean includeLocal) {
+        LinkedHashSet<String> unique = new LinkedHashSet<>();
+        if (includeLocal) {
+            unique.add(localUserId);
+        }
+        if (members != null) {
+            for (String member : members) {
+                if (member == null) {
+                    continue;
+                }
+                String trimmed = member.trim();
+                if (!trimmed.isEmpty()) {
+                    unique.add(trimmed);
+                }
+            }
+        }
+        return new ArrayList<>(unique);
+    }
+
+    private List<String> splitMembers(String members) {
+        if (members == null || members.isBlank()) {
+            return List.of();
+        }
+        List<String> result = new ArrayList<>();
+        for (String member : members.split(",")) {
+            result.add(member);
+        }
+        return result;
+    }
+
+    private List<String> immutableMembers(List<String> members) {
+        return Collections.unmodifiableList(new ArrayList<>(members));
+    }
+
+    private String chooseLeader(String preferredLeader, List<String> members) {
+        if (preferredLeader != null && !preferredLeader.isBlank() && members.contains(preferredLeader)) {
+            return preferredLeader;
+        }
+        return members.isEmpty() ? localUserId : members.get(0);
+    }
+
+    private String newNonce() {
+        byte[] nonceBytes = new byte[16];
+        new SecureRandom().nextBytes(nonceBytes);
+        return Base64.getEncoder().encodeToString(nonceBytes);
     }
 }
